test/should-fail/javaLangImport.f3
/*
 * Verify java.lang classes must be imported.
 * 
 * @test/fail javaLangImport.f3
 */
System.out.println("hello, world"); // no java.lang.System import
